# company-brain

./: .dockerignore  .env.example  .gitignore  CAPABILITIES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.tls.yml  docker-compose.yml  docker-entrypoint.sh  install.sh  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
api/: server.py
brain/: __init__.py  blocks.py  chunking.py  cli.py  config.py  core.py  embeddings.py  evaluate.py  facts.py  graph.py  hybrid.py  ontology.py  preferences.py  redact.py  resolve.py  scheduler.py  security.py  session.py  soul.py  store.py  summarize.py  vault.py
eval/: sample.json
mcp_server/: server.py
scripts/: brain-autosnapshot.sh  gen_key.py
tests/: _fake.py  conftest.py  test_api.py  test_brain.py  test_layers.py  test_security.py  test_smoke.py  test_v013.py  test_v015.py  test_v016.py
