[project]
name = "company-brain"
version = "1.0.0"
description = "A private, self-hosted second brain with semantic search, REST API, and MCP access."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "qdrant-client>=1.12,<2.0",
    "fastembed>=0.5,<1.0",
    "slowapi>=0.1.9",
    "mcp>=1.2",
    "httpx>=0.27",
]

[project.scripts]
brain-mcp = "mcp_server.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["brain", "api", "mcp_server"]
