[project]
name = "company-brain"
version = "0.0.1.6"
description = "A private, self-hosted second brain with semantic search, REST API, and MCP access."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "qdrant-client>=1.12,<2.0",
    "fastembed>=0.5,<1.0",
    "slowapi>=0.1.9",
    "mcp>=1.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
brain-mcp = "mcp_server.server:main"
brain = "brain.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["brain", "api", "mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["B008"]  # FastAPI uses Depends() in defaults by design

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
